@@ -269,30 +269,12 @@
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                     <encoding>UTF-8</encoding>
-                    <compilerArgs>
-                        <arg>--add-modules java.xml.bind</arg>
-                    </compilerArgs>
-                    <fork>true</fork>
-                    <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --add-modules java.xml.bind
-                        --illegal-access=deny
-                    </argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --add-modules java.xml.bind
-                        --illegal-access=deny
-                    </argLine>
-                </configuration>
             </plugin>
 
             <plugin>
